fix the padding and screen size styles on small screen

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,8 @@ a:hover {
 
 @media screen and (max-width: 480px) {
     .card {
-        width: 95%;
-        padding: 15px;
+        width: 100%;
+        padding: 10px;
+        margin: auto;
     }
 }
